Decrease masthead heading line-height

--- a/assets/scss/_project.scss
+++ b/assets/scss/_project.scss
@@ -22,7 +22,8 @@ $text: #333;
 
     h1 {
       font-size: 5em;
-      margin: 0 0 .5em;
+      margin: 0 0 .65em;
+      line-height: 1.1;
     }
 
     p {
