Show "new website" notice

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,9 @@
   </head>
 
   <body class="{% if page.theme %}{{ page.theme }}{% endif %} {% if page.project %}project{% endif %}">
+    <a href="https://danielgavrilov.com" style="display: block; text-decoration: none; padding: 16px; background-color: #555; color: #eee; text-align: center; font-size: 20px;">
+      This is my old website. You can find my new website at <u>danielgavrilov.com</u>.
+    </a>
     <div class="site-container">
       {{ content }}
     </div>
